Remove overflow:hidden on rows, source of some bugs

--- a/src/scss/layout/grid.scss
+++ b/src/scss/layout/grid.scss
@@ -2,7 +2,6 @@
 .row {
   @include centerize;
   margin-bottom: 20px;
-  overflow: hidden;
 }
 
 // Content creates a responsive space to hold page data
